--- a/UwbProjekt-Angular/src/app/doctors/doctors.component.html
+++ b/UwbProjekt-Angular/src/app/doctors/doctors.component.html
@@ -1,23 +1,30 @@
-<table class="table is fullwidth is-striped">
-        <thead class="thead">
-          <th>Imię</th>
-          <th>Nazwisko</th>
-          <th>E-mail</th>
-          <th>Administrator</th>
-          <th>Specid</th>
-        </thead>
-        <tbody *ngFor="let doctor of doctors">
-          <tr>
-            <td width="10%">{{doctor.firstName}}</td>
-            <td width="10%">{{doctor.lastName}}</td>
-            <td width="10%">{{doctor.email}}</td>
-            <td width="10%">{{doctor.admin ? "Tak": "Nie"}}</td>
-            <td width="10%">{{doctor.specId}}</td>
-            <td>
-              <a class="button is-small is-primary" routerLink='/doctors/{{doctor.id}}'>Przejdź</a>
-            </td>
-            <br>
-            <br>
-          </tr>
+<table class="table is-striped is-narrow is-hoverable is-fullwidth ">
+  <thead class="thead">
+    <th>ID</th>
+    <th>Imię</th>
+    <th>Nazwisko</th>
+    <th>E-mail</th>
+    <th>Administrator</th>
+    <th width="10%">Specjalizacja</th>
+    <th>Strona Lekarza</th>
+  </thead>
+  <tbody *ngFor="let doctor of doctors">
+    <tr>
+      <td width="10%">{{doctor.id}}</td>
+      <td width="10%">{{doctor.firstName}}</td>
+      <td width="10%">{{doctor.lastName}}</td>
+      <td width="10%">{{doctor.email}}</td>
+      <td width="10%">{{doctor.admin ? "Tak": "Nie"}}</td>
+      <table class="is-hoverable">
+        <tbody *ngFor="let spec of specs">
+          <td *ngIf="spec.id==doctor.specId">{{spec.name}}</td>
         </tbody>
       </table>
+      <td>
+        <a class="button is-small is-primary" routerLink='/doctors/{{doctor.id}}'>Przejdź</a>
+      </td>
+      <br>
+      <br>
+    </tr>
+  </tbody>
+</table>
