--- a/UwbProjekt-Angular/src/app/specs-stats/specs-stats.component.html
+++ b/UwbProjekt-Angular/src/app/specs-stats/specs-stats.component.html
@@ -1,24 +1,46 @@
-<table class="table is fullwidth is-striped">
-  <thead class="thead">
-    <th>ID</th>
-    <th>Nazwa</th>
-    <th width="10%">Liczba Lekarzy</th>
-    <th>Strona specjalizacji</th>
-  </thead>
-  <tbody *ngFor="let spec of specs">
-    <tr>
-      <td width="10%">{{spec.id}}</td>
-      <td width="10%">{{spec.name}}</td>
-      <table class="is-hoverable">
-        <tbody *ngFor="let specStat of specsStats">
-          <td *ngIf="specStat.id==spec.id">{{specStat.count}}</td>
-        </tbody>
-      </table>
-      <td>
-        <a class="button is-small is-primary" routerLink='/specs/{{spec.id}}'>Przejdź</a>
-      </td>
-      <br>
-      <br>
-    </tr>
-  </tbody>
-</table>
+<section class="section">
+  <div class="columns is-desktop is-multiline">
+    <div class="column is-desktop">
+      <div class="row">
+        <div class="column">
+          <table class="table is fullwidth is-striped">
+            <thead class="thead">
+              <th>ID</th>
+              <th>Nazwa</th>
+              <th width="10%">Liczba Lekarzy</th>
+              <th>Strona specjalizacji</th>
+            </thead>
+            <tbody *ngFor="let spec of specs">
+              <tr>
+                <td width="10%">{{spec.id}}</td>
+                <td width="10%">{{spec.name}}</td>
+                <table class="is-hoverable">
+                  <tbody *ngFor="let specStat of specsStats | paginate: { itemsPerPage: 8, currentPage: currentPage }">
+                    <td *ngIf="specStat.id==spec.id">{{specStat.count}}</td>
+                  </tbody>
+                </table>
+                <td>
+                  <a class="button is-small is-primary" routerLink='/specs/{{spec.id}}'>Przejdź</a>
+                </td>
+                <br>
+                <br>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="column">
+          <pagination-template #p="paginationApi" (pageChange)="currentPage = $event" class="pagination is-centered is-outlined">
+            <button [disabled]="p.isFirstPage()" (click)="p.setCurrent(1)" class="pagination-previous is-outlined">Pierwsza strona</button>
+            <button [disabled]="p.isFirstPage()" (click)="p.previous()" class="pagination-previous is-outlined">Poprzednia strona</button>
+            <button [disabled]="p.isLastPage()" (click)="p.next()" class="pagination-previous is-outlined">Następna strona</button>
+            <button [disabled]="p.isLastPage()" (click)="p.setCurrent(p.getLastPage())" class="pagination-previous is-outlined">Ostatnia strona</button>
+            <ul class="pagination-list">
+              <li *ngFor="let page of p.pages">
+                <button class="pagination-link" [ngClass]="{ 'is-current' : p.getCurrent() == page.value}" (click)="p.setCurrent(page.value)">{{page.label}}</button>
+            </ul>
+          </pagination-template>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
