--- a/UwbProjekt-Angular/src/app/user-panel/user-panel.component.html
+++ b/UwbProjekt-Angular/src/app/user-panel/user-panel.component.html
@@ -40,7 +40,7 @@
         <ul class="menu-list">
           <li>
 
-            <a class="button is-dark is-medium" (click)="showMedicalHistoryEnable()">Wyświetl Kartę wizyt</a>
+            <a class="button is-dark is-medium" (click)="showMedicalHistoryEnable()">Wyświetl kartę wizyt</a>
           </li>
         </ul>
         <br>
