--- a/UwbProjekt-Angular/src/app/specdetails/specdetails.component.html
+++ b/UwbProjekt-Angular/src/app/specdetails/specdetails.component.html
@@ -3,7 +3,7 @@
   </div>
 </section>
 <div class="hero-body">
-  <div class="container has-text-centered" *ngFor="let doctor of doctors">
+  <div class="container has-text-centered" *ngFor="let doctor of doctors | paginate: { itemsPerPage: 2, currentPage: currentPage }">
     <div class="columns is-vcentered">
       <div class="column is-4">
         <figure>
@@ -25,5 +25,18 @@
         </p>
       </div>
     </div>
+  </div>
+
+  <div class="column">
+    <pagination-template #p="paginationApi" (pageChange)="currentPage = $event" class="pagination is-centered is-outlined">
+      <button [disabled]="p.isFirstPage()" (click)="p.setCurrent(1)" class="pagination-previous is-outlined">Pierwsza strona</button>
+      <button [disabled]="p.isFirstPage()" (click)="p.previous()" class="pagination-previous is-outlined">Poprzednia strona</button>
+      <button [disabled]="p.isLastPage()" (click)="p.next()" class="pagination-previous is-outlined">Następna strona</button>
+      <button [disabled]="p.isLastPage()" (click)="p.setCurrent(p.getLastPage())" class="pagination-previous is-outlined">Ostatnia strona</button>
+      <ul class="pagination-list">
+        <li *ngFor="let page of p.pages">
+          <button class="pagination-link" [ngClass]="{ 'is-current' : p.getCurrent() == page.value}" (click)="p.setCurrent(page.value)">{{page.label}}</button>
+      </ul>
+    </pagination-template>
   </div>
 </div>
