--- a/UwbProjekt-Angular/src/app/user-panel/user-panel.component.html
+++ b/UwbProjekt-Angular/src/app/user-panel/user-panel.component.html
@@ -28,7 +28,7 @@
                   <i class="fa fa-user-circle"></i>
                   Panel Użytkownika
                 </h1>
-                <h2 class="subtitle" s>
+                <h2 class="subtitle" >
                   <br>
                 </h2>
               </div>
