--- a/UwbProjekt-Angular/src/app/doctors/doctor-details/doctor-details.component.html
+++ b/UwbProjekt-Angular/src/app/doctors/doctor-details/doctor-details.component.html
@@ -30,6 +30,24 @@
           </li>
         </ul>
 
+        <div *ngIf="showInfoForAdmin">
+          <p class="menu-label">
+            Użytkownicy
+          </p>
+          <ul class="menu-list">
+            <li>
+              <a class="button is-dark is-medium" (click)="showUsersEnable()">Pacjenci</a>
+              <br>
+            </li>
+            <li>
+              <a class="button is-dark is-medium" (click)="showAppointmentsEnable()">Wizyty</a>
+              <br>
+            </li>
+          </ul>
+
+        </div>
+
+
       </aside>
     </div>
     <div class="column">
@@ -94,6 +112,46 @@
               </div>
             </div>
           </div>
+
+
+
+          <div *ngIf="showUsers">
+            <section class="hero is-dark is-bold is-small promo-block">
+              <div class="hero-body">
+                <div class="container">
+                  <h1 class="title">
+                    <i class="fa fa-users"></i>
+                    Moi Pacjenci
+                  </h1>
+                  <h2 class="subtitle">
+                  </h2>
+                </div>
+              </div>
+            </section>
+            <br>
+            <app-doctor-users></app-doctor-users>
+          </div>
+
+          <div *ngIf="showAppointments">
+            <section class="hero is-dark is-bold is-small promo-block">
+              <div class="hero-body">
+                <div class="container">
+                  <h1 class="title">
+                    <i class="fa fa-users"></i>
+                    Moje Wizyty
+                  </h1>
+                  <h2 class="subtitle">
+                  </h2>
+                </div>
+              </div>
+            </section>
+            <br>
+            <app-doctor-appointments></app-doctor-appointments>
+          </div>
+
+
+
+
         </div>
       </div>
     </div>
