Added edit Appointment process functionality, some html fixes

--- a/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
+++ b/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
@@ -154,7 +154,7 @@
                 <div class="field">
                   <label class="label">Specjalizacja</label>
                   <div class="control has-icons-left has-icons-right">
-                    <input class="input" type="text" [(ngModel)]="specModel.specName" placeholder="Wpisz specjalizacje" name="Specjalizacja">
+                    <input class="input" type="text" [(ngModel)]="specModel.specName" placeholder="Wpisz specjalizacje" name="Specjalizacja" required>
                   </div>
                 </div>
                 <div class="field is-grouped">
