--- a/UwbProjekt-Angular/src/app/header/header.component.html
+++ b/UwbProjekt-Angular/src/app/header/header.component.html
@@ -19,9 +19,9 @@
                             Moje konto
                         </a>
 
-                        <a class="navbar-item" routerLink="/adminpanel" routerLinkActive="active" *ngIf="(isAdminLoggedIn() || isDoctorAdminLoggedIn())">
+                     <!-- <a class="navbar-item" routerLink="/adminpanel" routerLinkActive="active" *ngIf="(isAdminLoggedIn() || isDoctorAdminLoggedIn())">
                             Panel Administratora
-                        </a>
+                        </a> -->
                         <a class="navbar-item" routerLink="/doctorpanel" routerLinkActive="active" *ngIf="(isDoctorLoggedIn() || isDoctorAdminLoggedIn()) ">
                             Panel Lekarza
                         </a>
