--- a/UwbProjekt-Angular/src/app/home/home.component.html
+++ b/UwbProjekt-Angular/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title">
-                Nowy standard kliniki Medicare
+                System rezerwacji wizyt
             </h1>
             <h2>
                 Kompleksowe świadczenie usług medycznych na najwyższym poziomie przez profesjonalną kadrę.
